--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Webdevelopement Immersive  
+  uni: General Assembly
+  year: February, 2019 &mdash; May, 2019
   # awards:
   # summary:
